apps/zem-internal/zem-homepage/templates/argocd-cluster01.service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    tailscale.com/tailnet-fqdn: argocd-cluster01.shark-puffin.ts.net
    tailscale.com/proxy-group: "zem-internal-egress"
  name: argocd-cluster01   # service name
spec:
  externalName: unused   # any value - will be overwritten by operator
  type: ExternalName
