apps/zem-internal/zem-homepage/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
spec:
  defaultBackend:
    service:
      name: homepage
      port:
        number: 3000
  ingressClassName: tailscale
  tls:
    - hosts:
        - home
